# Claw-STU

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  FEATURES.md  GETTING_STARTED.md  HEARTBEAT.md  Handoff.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SOUL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  heartbeat.yml
clawstu/: __init__.py  bot.py  cli.py  cli_chat.py  cli_companions.py  cli_state.py  mcp_server.py  setup_wizard.py
clawstu/agent/: __init__.py  approvals.py  base_tool.py  loop.py  prompt.py  registry.py
clawstu/agent/tools/: __init__.py  check_learning_goals.py  define_learning_goals.py  export_docx.py  export_flashcards.py  export_html.py  export_pdf.py  fetch_source.py  find_template.py  generate_animation.py  generate_flashcards.py  generate_game.py  generate_practice_test.py  generate_simulation.py  generate_slides.py  generate_study_guide.py  generate_visual.py  generate_worksheet.py  read_misconceptions.py  read_profile.py  save_template.py  search_brain.py  search_teacher_materials.py  search_web.py  write_note.py
clawstu/api/: __init__.py  admin.py  auth.py  learners.py  main.py  profile.py  quick.py  rate_limit.py  session.py  state.py
clawstu/api/static/: index.html  stu.css  stu.js
clawstu/assessment/: __init__.py  crq.py  evaluator.py  feedback.py  generator.py
clawstu/curriculum/: __init__.py  content.py  live_generator.py  pathway.py  topic.py
clawstu/engagement/: __init__.py  modality.py  session.py
clawstu/memory/: __init__.py  capture.py  context.py  dream.py  embeddings.py  knowledge_graph.py  search.py  store.py  wiki.py  writer.py
clawstu/memory/pages/: __init__.py  base.py  concept.py  learner.py  misconception.py  session.py  source.py  template.py  topic.py
clawstu/orchestrator/: __init__.py  chain.py  config.py  live_content.py  provider_anthropic.py  provider_google.py  provider_ollama.py  provider_openai.py  provider_openrouter.py  providers.py  router.py  task_kinds.py
clawstu/persistence/: __init__.py  connection.py  migrations.py  schema.py  store.py
clawstu/profile/: __init__.py  export.py  model.py  observer.py  zpd.py
clawstu/safety/: __init__.py  content_filter.py  escalation.py  gate.py
clawstu/scheduler/: __init__.py  context.py  registry.py  runner.py
clawstu/scheduler/tasks/: __init__.py  _common.py  dream_cycle.py  prepare_next_session.py  prune_stale.py  refresh_zpd.py  spaced_review.py
docs/: API.md  CHROME_EXTENSION.md  CONFIG_RESOLUTION.md  index.html  robots.txt  sitemap.xml
docs/superpowers/plans/: 2026-04-11-phase-1-packaging-providers-config-cli.md  2026-04-11-phase-2-async-migration-router.md  2026-04-11-phase-3-persistence.md
docs/superpowers/specs/: 2026-04-11-claw-stu-providers-memory-proactive-design.md  2026-04-13-competitive-borrowing-plan.md  2026-04-13-stuart-v5-parity-design.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
src/api/: __init__.py  admin.py  main.py  profile.py  session.py  state.py
src/assessment/: __init__.py  crq.py  evaluator.py  feedback.py  generator.py
src/curriculum/: __init__.py  content.py  live_generator.py  pathway.py  sources.py  standards.py  topic.py
src/engagement/: __init__.py  modality.py  session.py  signals.py
src/orchestrator/: __init__.py  chain.py  prompts.py
src/profile/: __init__.py  export.py  observer.py  zpd.py
src/safety/: __init__.py  boundaries.py  content_filter.py
tests/: conftest.py  test_agent_loop.py  test_api.py  test_api_auth.py  test_api_docs.py  test_api_learners.py  test_api_topic_onboard.py  test_app_state_persistence.py  test_assessment.py  test_auth_modes.py  test_auth_regression.py  test_bot.py  test_chrome_extension.py  test_cli.py  test_cli_chat.py  test_cli_companions.py  test_cli_state.py  test_cli_v5.py  test_config.py  test_cors.py  test_engagement_signals.py  test_export_io.py  test_export_tools.py  test_foundational_reteach.py  test_hierarchy.py  test_imports.py  test_inbound_safety_gate.py  test_live_content.py  test_live_content_errors.py  test_mcp_server.py  test_memory_context.py  test_memory_dream.py  test_memory_embeddings.py  test_memory_knowledge_graph.py  test_memory_pages.py  test_memory_search.py  test_memory_store.py  test_memory_wiki.py  test_memory_writer.py  test_onnx_embeddings_scaffold.py  (+34 more)
