[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-stu"
version = "0.1.0"
description = "Stuart — a personal learning agent that grows with the student."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "SirhanMacx" },
]
keywords = ["education", "ai", "learning", "adaptive", "zpd", "open-source"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    # live_generator.py is LLM-backed and will be relocated to
    # src/orchestrator/live_content.py in Phase 2 (per
    # docs/superpowers/specs/2026-04-11-claw-stu-providers-memory-proactive-design.md
    # §4.1). Its tests land in that phase against the new location.
    "src/curriculum/live_generator.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# B008: FastAPI uses `Depends()` in default args as a documented pattern.
# E501: long lines are fine; we have a 100-char limit but prose in strings
# sometimes runs longer and that's acceptable.
# UP042: `class X(str, Enum)` is the pattern that interops cleanly with
# Pydantic/JSON across Python versions; StrEnum's `str()` behavior differs
# and we prefer the portable form for now.
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
